--- a/GitHubFiles/Project folder/index.html
+++ b/GitHubFiles/Project folder/index.html
@@ -98,7 +98,7 @@
                 <div class="row m-auto py-5">
                     <div class="col-lg-3 col-md-5 col-sm-0 ">
                         <div class="card bs-body-color">
-                            <a href="../Project%20folder/Services/index.html">
+                            <a href="../Project%20folder/Services/services.html">
                                 <img src="images/pexels-oluwaseun-duncan-226232.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text" style="height: 18rem;">We develop applications in different
@@ -110,7 +110,7 @@
                     </div>
                     <div class="col-lg-3 col-md-5 col-sm-0 ">
                         <div class="card">
-                            <a href="../Project%20folder/Services/index.html">
+                            <a href="../Project%20folder/Services/services.html">
                                 <img src="images/pexels-porapak-apichodilok-369376.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text" style="height: 18rem;">Diversity of platform design, taking in
@@ -122,7 +122,7 @@
                     </div>
                     <div class="col-lg-3 col-md-5 col-sm-0 ">
                         <div class="card">
-                            <a href="../Project%20folder/Services/index.html">
+                            <a href="../Project%20folder/Services/services.html">
                                 <img src="images/pexels-tim-douglas-6205512.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text" style="height: 18rem;">Our products can help in a varaiety of
