--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 									href="./GitHubFiles/Week9 lab/subjects.html">Week9 part2</a>
 							</li>
 							<li><a target="_blank" class="dropdown-item"
+									href="./GitHubFiles/Week 10 lab/Week 10lab.html">Week10</a>
+							</li>
+							<li><a target="_blank" class="dropdown-item"
 									href="./GitHubFiles/Project folder/index.html">Project</a>
 							</li>
 
